--- a/main-style.css
+++ b/main-style.css
@@ -5,7 +5,7 @@ li {
 body {
     margin:0;
     background:whitesmoke;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: "Helvetica Neue",HelveticaNeue,Helvetica,Arial,"Lucida Grande",sans-serif;
 }
 ul {
     margin-left: 0;
