--- a/main-style.css
+++ b/main-style.css
@@ -5,7 +5,7 @@ li {
 body {
     margin:0;
     background:whitesmoke;
-    font-family: "Helvetica Neue",HelveticaNeue,Helvetica,Arial,"Lucida Grande",sans-serif;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 ul {
     margin-left: 0;
