--- a/e-mail-style.css
+++ b/e-mail-style.css
@@ -1,5 +1,60 @@
 #e-mail {
-    height: 270px;
+    margin: 0;
+    height: 280px;
     width: 100%;
     background: #446ba5;
+}
+#e-mail ul {
+    position: relative; 
+    top: 60px;
+}
+#searching {
+    position: relative;
+    width: 500px;
+    margin: 0 auto;
+}
+#e-mail_mail {
+    position: relative;
+    width: 350px;
+    margin: 0 auto;
+    font-size: 40px;
+    bottom: 20px;
+    color: white;
+    text-align: center;
+}
+#searching input {
+  width: 100%;
+  height: 42px;
+  padding-left: 10px;
+  border: 2px solid #7BA7AB;
+  border-radius: 5px;
+  outline: none;
+  background: #F9F0DA;
+  color: #9E9C9C;
+}
+#searching button {
+  position: absolute; 
+  top: 0;
+  right: 0px;
+  width: 42px;
+  height: 42px;
+  border: none;
+  background: #7BA7AB;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+}
+#searching button:before {
+  content: "\f002";
+  font-family: FontAwesome;
+  font-size: 16px;
+  color: #F9F0DA;
+}
+#inf-about-mail {
+    position: relative;
+    top: 20px;
+    width: 400px;
+    margin: 0 auto;
+    font-size: 15px;
+    text-align: center;
+    color: white;
 }
