--- a/css/e-mail-style.css
+++ b/css/e-mail-style.css
@@ -2,7 +2,7 @@
     margin: 0;
     height: 280px;
     width: 100%;
-    background: #446ba5;
+    background-image: url(https://picsum.photos/5472/3648?image=1073);
 }
 #e-mail ul {
     position: relative; 
@@ -13,21 +13,21 @@
     width: 500px;
     margin: 0 auto;
 }
-#e-mail_mail {
+#e-mail-mail {
     position: relative;
     width: 350px;
     margin: 0 auto;
-    font-size: 40px;
+    font-size: 30px;
     bottom: 20px;
     color: white;
     text-align: center;
+    font-weight: bold;
 }
 #searching input {
   width: 100%;
   height: 42px;
   padding-left: 10px;
-  border: 2px solid #7BA7AB;
-  border-radius: 5px;
+  border: 1px solid rgb(255, 255, 255);
   outline: none;
   background: #F9F0DA;
   color: #9E9C9C;
@@ -35,12 +35,11 @@
 #searching button {
   position: absolute; 
   top: 0;
-  right: 0px;
+  right: -12px;
   width: 42px;
-  height: 42px;
+  height: 46px;
   border: none;
   background: #7BA7AB;
-  border-radius: 0 5px 5px 0;
   cursor: pointer;
 }
 #searching button:before {
