--- a/css/blogs-style.css
+++ b/css/blogs-style.css
@@ -1,15 +1,18 @@
 .blogs-info {
-    width: 320px;
+    display: flex;
+    width: 300px;
     height: 480px;
-    margin-left: 32px;
     margin-bottom: 15px;
     background: white;
     text-align:  center;
+    flex-wrap: wrap;
+    flex-direction: column;/*как сделать пробелы*/
 }
 .blogs-block {
-    display: flex;
     padding-left: 120px;
     padding-right: 120px;
+    display: flex;
+    justify-content: center;
 }
 .times-view {
     position: relative;
