--- a/css/categories-style.css
+++ b/css/categories-style.css
@@ -4,10 +4,11 @@
     padding-left: 25px;
 }
 #categories ul {
-    padding-left: 145px;
-    padding-right: 145px;
+    padding-left: 120px;
+    padding-right: 120px;
 }
 #categories {
+    display: flex;
     position: relative;
     right: 20px;
     padding-top: 17px;
