--- a/css/e-mail-style.css
+++ b/css/e-mail-style.css
@@ -13,7 +13,7 @@
     width: 500px;
     margin: 0 auto;
 }
-#e-mail-mail {
+#name-block {
     position: relative;
     width: 350px;
     margin: 0 auto;
