--- a/css/button-style.css
+++ b/css/button-style.css
@@ -23,5 +23,6 @@
 #button {
     display: flex;
     justify-content: center;
-    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-bottom: 20px;
 }
