--- a/css/categories-style.css
+++ b/css/categories-style.css
@@ -2,6 +2,7 @@
     margin: auto;
     display: inline;
     padding-left: 25px;
+    justify-content: center;
 }
 #categories ul {
     padding-left: 150px;
