--- a/css/e-mail-style.css
+++ b/css/e-mail-style.css
@@ -24,29 +24,23 @@
     font-weight: bold;
 }
 #searching input {
-  width: 100%;
-  height: 42px;
-  padding-left: 10px;
-  border: 1px solid rgb(255, 255, 255);
-  outline: none;
-  background: #F9F0DA;
-  color: #9E9C9C;
+    width: 100%;
+    height: 42px;
+    padding-left: 10px;
+    border: 1px solid rgb(255, 255, 255);
+    outline: none;
+    background: #F9F0DA;
+    color: #9E9C9C;
 }
 #searching button {
-  position: absolute; 
-  top: 0;
-  right: -12px;
-  width: 42px;
-  height: 46px;
-  border: none;
-  background: #7BA7AB;
-  cursor: pointer;
-}
-#searching button:before {
-  content: "\f002";
-  font-family: FontAwesome;
-  font-size: 16px;
-  color: #F9F0DA;
+    position: relative;
+    bottom: 40px; 
+    left: 380px;
+    font-size: 30px;
+    background: #F9F0DA;
+    color: rgb(126, 194, 201);
+    border: none;
+    cursor: pointer;
 }
 #inf-about-mail {
     position: relative;
