--- a/css/button-style.css
+++ b/css/button-style.css
@@ -1,6 +1,6 @@
 .button-styles {
-    width: 200px;
-    height: 44px;
+    width: 240px;
+    height: 50px;
     line-height: 50px;
     font-size: 18px;
     text-align: center;
@@ -11,13 +11,13 @@
     background: rgb(131, 210, 218) radial-gradient(150% 100% at 50% 5px, rgba(255,255,255,.2), rgba(0,0,0,0));
     color: rgb(255, 255, 255);
     user-select: none;
+    padding-top: 3px;
 } 
 .button-styles:hover {
     color: rgb(0,59,66);
     cursor: pointer;
 }
 .button-styles:active {
-    padding-bottom: 1px;
     color: rgb(128,207,214);
 }
 #button {
