add button for head and change in head ul on div, some media for header and some small changes

--- a/css/categories-style.css
+++ b/css/categories-style.css
@@ -20,3 +20,8 @@
     color: #000025;
     text-decoration: none;
 }
+@media (max-width: 1000px) {
+    #categories  {
+        right: 30px;
+    }
+}
