Change media in head, iformation, blogs and catalog. Change button in head and all font in text is Sans

--- a/css/blogs-style.css
+++ b/css/blogs-style.css
@@ -44,6 +44,15 @@
 #first_element {
     margin-left: 0;
 }
-@media (max-width: 750px) {
-    
+@media (max-width: 1050px) {
+    .blogs-block {
+        display: block;
+    }
+    .blogs-info {
+        margin-left: 0px;
+    }
+    #blogs {
+        display: flex;
+        justify-content: center;
+    }
 }
