--- a/css/categories-style.css
+++ b/css/categories-style.css
@@ -20,8 +20,63 @@
     color: #000025;
     text-decoration: none;
 }
-@media (max-width: 1000px) {
+@media (max-width: 1250px) {
     #categories  {
-        right: 30px;
+        right: 185px;
+    }
+}
+@media (max-width: 1230px) {
+    #categories  {
+        right: 175px;
+    }
+}
+@media (max-width: 1210px) {
+    #categories  {
+        right: 165px;
+    }
+}
+@media (max-width: 1190px) {
+    #categories  {
+        right: 155px;
+    }
+}
+@media (max-width: 1170px) {
+    #categories  {
+        right: 145px;
+    }
+}
+@media (max-width: 1150px) {
+    #categories  {
+        right: 135px;
+    }
+}
+@media (max-width: 1130px) {
+    #categories  {
+        right: 125px;
+    }
+}
+@media (max-width: 1110px) {
+    #categories  {
+        right: 115px;
+    }
+}
+@media (max-width: 1090px) {
+    #categories  {
+        right: 105px;
+    }
+}
+@media (max-width: 1070px) {
+    #categories  {
+        right: 95px;
+    }
+}
+@media (max-width: 1050px) {
+    #categories  {
+        right: 85px;
+    }
+}
+@media (max-width: 1050px) {
+    #categories  {
+        right: 85px;
     }
 }
