--- a/css/e-mail-style.css
+++ b/css/e-mail-style.css
@@ -26,18 +26,18 @@
 #searching input {
     width: 100%;
     height: 34px;
-    border: 1px solid rgb(255, 255, 255);
+    border: 1px solid rgb(209, 194, 194);
     outline: none;
     background: #F9F0DA;
     color: #9E9C9C;
 }
 #searching button {
     position: relative;
-    bottom: 34.5px; 
+    bottom: 35.8px; 
     left: 370px;
     font-size: 27px;
-    width: 20px;
-    height: px;
+    width: 34px;
+    height: 34px;
     background: #F9F0DA;
     color: rgb(126, 194, 201);
     border: none;
