--- a/css/main-style.css
+++ b/css/main-style.css
@@ -5,7 +5,7 @@ li {
 body {
     margin:0;
     background:whitesmoke;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: sans-serif;
 }
 ul {
     margin-left: 0;
