Change media in a header and new media, and line in active.

--- a/css/blogs-style.css
+++ b/css/blogs-style.css
@@ -52,7 +52,18 @@
         margin-left: 0px;
     }
     #blogs {
-        display: flex;
+        display:   flex ;
         justify-content: center;
+    }
+}
+@media (max-width: 650px) {
+    .blogs-block {
+        display: block;
+    }
+    .blogs-info {
+        margin-left: 0px;
+    }
+    #blogs {
+        display: grid;
     }
 }
