--- a/css/head-style.css
+++ b/css/head-style.css
@@ -24,13 +24,22 @@ header {
     right: 10px;
 }
 #inf-head {
-    width: 400px;
     display: inline-flex;
-    position: relative;
     font-family: sans-serif;
     font-weight: bold;
+}
+#inf-head li {
+    position: relative;
+    height: 100%;
     top: 11px;
-    right: 228px;
+    right: 262px;
+    padding-left: px;
+    box-sizing: border-box;
+    margin-right: 20px;
+}
+#ative-line {
+    box-sizing: border-box;
+    border-bottom: 4px solid #2FF7D8;
 }
 #sait-name {
     font-size: 49px;
@@ -45,7 +54,6 @@ header {
     font-weight: bold;
 }
 .categori-head {
-    padding-left: 22px;
     color: white;
     text-decoration: none;
     font-size: 14px;
@@ -112,170 +120,12 @@ header {
     cursor: pointer;
     background: rgb(128,207,214); 
 }
-@media (max-width: 1520px) {
-    #head-full {
-        padding-left: 140px;
-    }
-}
-@media (max-width: 1510px) {
-    #head-full {
-        padding-left: 135px;
-    }
-}
-@media (max-width: 1500px) {
-    #head-full {
-        padding-left: 130px;
-    }
-}
-@media (max-width: 1490px) {
-    #head-full {
-        padding-left: 125px;
-    }
-}
-@media (max-width: 1480px) {
-    #head-full {
-        padding-left: 120px;
-    }
-}
-@media (max-width: 1460px) {
-    #head-full {
-        padding-left: 110px;
-    }
-}
-@media (max-width: 1440px) {
-    #head-full {
-        padding-left: 100px;
-    }
-}
-@media (max-width: 1420px) {
-    #head-full {
-        padding-left: 90px;
-    }
-}
-@media (max-width: 1400px) {
-    #head-full {
-        padding-left: 80px;
-    }
-}
-@media (max-width: 1380px) {
-    #head-full {
-        padding-left: 70px;
-    }
-}
-@media (max-width: 1360px) {
-    #head-full {
-        padding-left: 60px;
-    }
-}
-@media (max-width: 1350px) {
-    #head-full {
-        padding-left: 55px;
-    }
-    #inf-head {
-        right: 218px;
-    }
-}
-@media (max-width: 1340px) {
-    #head-full {
-        padding-left: 50px;
-    }
-    #inf-head {
-        right: 208px;
-    }
-}
-@media (max-width: 1330px) {
-    #head-full {
-        padding-left: 45px;
-    }
-    #inf-head {
-        right: 198px;
-    }
-}
-@media (max-width: 1320px) {
-    #head-full {
-        padding-left: 40px;
-    }
-    #inf-head {
-        right: 188px;
-    }
-}
-@media (max-width: 1310px) {
-    #head-full {
-        padding-left: 35px;
-    }
-}
-@media (max-width: 1300px) {
-    #head-full {
-        padding-left: 30px;
-    }
-    #inf-head {
-        right: 178px;
-    }
-}
-@media (max-width: 1290px) {
-    #head-full {
-        padding-left: 25px;
-    }
-    #inf-head {
-        right: 180px;
-    }
-}
-@media (max-width: 1280px) {
-    #head-full {
-        padding-left: 20px;
-    }
-    #inf-head {
-        right: 198px;
-    }
-}
-@media (max-width: 1270px) {
-    #head-full {
-        padding-left: 15px;
-    }
-    #inf-head {
-        right: 198px;
-    }
-}
-@media (max-width: 1260px) {
-    #head-full {
-        padding-left: 10px;
-    }
-    #inf-head {
-        right: 208px;
-    }
-}
-@media (max-width: 1250px) {
-    #head-full {
-        padding-left: 5px;
-    }
-    #inf-head {
-        right: 198px;
-    }
-}
-@media (max-width: 1240px) {
+@media (max-width: 1370px) {
     #head-full {
         padding-left: 0px;
     }
-    #inf-head {
-        right: 188px;
-    }
 }
-@media (max-width: 1150px) {
-    #inf-head {
-        right: 158px;
-    }
-}
-@media (max-width: 1100px) {
-    #inf-head {
-        right: 88px;
-    }
-}
-@media (max-width: 1085px) {
-    #inf-head {
-        right: 128px;
-    }
-}
-@media (max-width: 1050px) {
+@media (max-width: 1250px) {
     .fa-pen-square span {
         display: none;
     }
