--- a/css/blogs-style.css
+++ b/css/blogs-style.css
@@ -1,41 +1,65 @@
-.blogs-info {
+.blog-card {
     display: flex;
-    width: 300px;
-    height: 480px;
-    margin-bottom: 15px;
+    width: 280px;
+    height: 440px;
     background: white;
     text-align:  center;
     flex-wrap: wrap;
-    flex-direction: column;/*как сделать пробелы*/
+    flex-direction: column;
 }
-.blogs-block {
-    padding-left: 120px;
-    padding-right: 120px;
-    display: flex;
+#blogs-list {
+    display: grid;
     justify-content: center;
+    grid-column-gap: 30px;
+    grid-row-gap: 13px;
+    grid-template-columns: 280px 280px 280px 280px;
 }
 .times-view {
     position: relative;
-    top: 60px;
+    top: 26.5px;
     font-size: 14px;
     color: #a1a3a3;
 }
 .info-about {
     position: relative;
     height: 130px;
-    top: 15px;
-    font-size: 27px;
-    margin-left: 20px;
-    margin-right: 20px;
+    top: 20px;
+    font-size: 21.5px;
+    margin-left: 30px;
+    margin-right: 30px;
     font-weight: bold;
+    overflow: hidden;
+}
+.info-about:hover {
+    color: rgb(126, 194, 201); 
 }
 .titles {
     position: relative;
-    top: 5px;
-    font-size: 15px;
+    font-size: 12px;
     color: #ec346d;
     font-weight: bold;
+    top: 12px;
 }
 #blogs {
-    padding-top: 5px;
+    padding-top: 18px;
+    margin: 0;
+}
+@media (max-width: 1250px) {
+    #blogs-list {
+        grid-template-columns: 280px 280px 280px;
+    }
+    #blogs {
+        display:   flex ;
+        justify-content: center;
+    }
+}
+@media (max-width: 950px) {
+    #blogs-list {
+        grid-template-columns: 280px 280px;
+    }
+}
+@media (max-width: 650px) {
+    #blogs-list {
+        grid-template-columns: 280px;
+    }
 }
