--- a/css/e-mail-style.css
+++ b/css/e-mail-style.css
@@ -1,59 +1,65 @@
 #e-mail {
     margin: 0;
-    height: 280px;
+    height: 290px;
     width: 100%;
     background-image: url(https://picsum.photos/5472/3648?image=1073);
 }
 #e-mail ul {
     position: relative; 
-    top: 60px;
+    top: 95px;
 }
 #searching {
     position: relative;
-    width: 500px;
+    width: 420px;
     margin: 0 auto;
 }
 #name-block {
     position: relative;
-    width: 350px;
+    width: 340px;
     margin: 0 auto;
-    font-size: 30px;
-    bottom: 20px;
+    font-size: 28px;
+    bottom: 24px;
     color: white;
     text-align: center;
     font-weight: bold;
 }
 #searching input {
-  width: 100%;
-  height: 42px;
-  padding-left: 10px;
-  border: 1px solid rgb(255, 255, 255);
-  outline: none;
-  background: #F9F0DA;
-  color: #9E9C9C;
+    width: 100%;
+    height: 34px;
+    border: 1px solid rgb(209, 194, 194);
+    outline: none;
+    background: #F9F0DA;
+    color: #9E9C9C;
 }
 #searching button {
-  position: absolute; 
-  top: 0;
-  right: -12px;
-  width: 42px;
-  height: 46px;
-  border: none;
-  background: #7BA7AB;
-  cursor: pointer;
-}
-#searching button:before {
-  content: "\f002";
-  font-family: FontAwesome;
-  font-size: 16px;
-  color: #F9F0DA;
+    position: relative;
+    bottom: 35.8px; 
+    left: 370px;
+    font-size: 27px;
+    width: 34px;
+    height: 34px;
+    background: #F9F0DA;
+    color: rgb(126, 194, 201);
+    border: none;
+    cursor: pointer;
 }
 #inf-about-mail {
     position: relative;
-    top: 20px;
-    width: 400px;
+    bottom: 16px;
+    width: 440px;
     margin: 0 auto;
-    font-size: 15px;
+    font-size: 13px;
     text-align: center;
     color: white;
+}
+@media (max-width: 670px) {
+    #searching {
+        width: 200px;
+    }
+    #searching button {
+        left: 80%;
+    }
+    #inf-about-mail {
+        width: 320px;
+    }
 }
