--- a/css/information-style.css
+++ b/css/information-style.css
@@ -1,35 +1,86 @@
 #information {
-    height: 270px;
+    display: flex;
+    height: 368px;
     width: 100%;
     position: relative;
     background: hsl(0, 0%, 13%);
+    justify-content: center;
+    margin: 0;
 }
 #information ul {
-    padding-top: 70px;
+    padding-top: 58px;
     margin: 0;
 }
 #inf-categories {
-    position: relative;
-    width: 900px;
+    display: flex;
+    width: auto;
     margin: 0 auto;
-    text-align: center;
-    font-size: 14px;
-    color: white;
+    justify-content: center;
+    font-size: 13px;
     font-weight: bold;
 }
-#inf-categories span {
+#inf-categories a {
     padding-left: 20px;
+    text-decoration: none;
+    color: #ececec;
+}
+#inf-categories a:hover {
+    color: rgb(126, 194, 201);
 }
 #inf {
-    position: relative;
-    width: 800px;
-    font-size: 15px;
-    padding-top: 20px;
+    width: 680px;
+    font-size: 13px;
+    padding-top: 32px;
     margin: 0 auto;
     text-align: center;
-    color: #a1a3a3;
+    justify-content: center;
 }
-#inf span {
+#inf a {
     padding-left: 20px;
     padding-bottom: 20px;
+    text-decoration: none;
+    color: #a1a3a3;
+}
+#inf a:hover {
+    color: rgb(126, 194, 201);
+}
+#icon-web {
+    display: flex;
+    font-size: 32px;
+    padding-top: 54px;
+    text-align: center;
+    justify-content: center;
+}
+#icon-web a {
+    color: #ececec;
+    text-decoration: none;
+}
+#icon-web i {
+    padding-right: 26px;
+}
+#traid-mark {
+    display: flex;
+    text-align: center;
+    padding-top: 44px;
+    color: #ececec;
+    font-size: 13px;
+    justify-content: center;
+}
+@media (max-width: 1050px) {
+    #inf {
+        display: block;
+        width: auto;
+        height: auto;
+    }
+}
+@media (max-width: 670px) {
+    #inf {
+        width: 350px;
+    }
+    #inf-categories {
+        display: block;
+    }
+    #icon-web {
+        padding-top: 55px;
+    }
 }
