--- a/css/head-style.css
+++ b/css/head-style.css
@@ -5,6 +5,7 @@ header {
     background: hsl(0, 0%, 13%);
     color: white;
     display: flex;
+    justify-content: center;
 }
 #head-full {
     display: flex;
@@ -14,7 +15,6 @@ header {
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     position: relative;
-    padding-left: 150px;
 }
 #sing-up-and-make-blog {
     width: 300px;
@@ -32,7 +32,7 @@ header {
     position: relative;
     height: 100%;
     bottom: 4.2px;
-    right: 262px;
+    right: 242px;
     box-sizing: border-box;
     margin-right: 20px;
 }
@@ -46,6 +46,7 @@ header {
     margin: 0;
     position: relative;
     bottom: 5px;
+    left: 30px;
 }
 #sait-name a {
     color: white;
@@ -116,7 +117,7 @@ header {
 }
 #entrance:hover {
     cursor: pointer;
-    background: rgb(128,207,214); 
+    background-color: rgb(128,207,214); 
 }
 @media (max-width: 1370px) {
     #head-full {
